--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div style="position: relative;">
     <h1 class="rule">STALIN’S RULE</h1>
     <h1 class="rule">IN THE USSR</h1>
-    <img style="position: absolute; left:269px; top:232px;   z-index: -1; " src="./Image/Joseph_Stalin,_1950_(cropped) 1.png" alt="">
+    <img style="display: block; margin: 0 auto; z-index: -1;" src="./Image/Joseph_Stalin,_1950_(cropped) 1.png" alt="">
 </div>
 </body>
 </html>
